Made some neat credits :)

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ background-color:black            }
                 </section>
 
             </div>
-
+            <h3>&nbsp;<a href="https://github.com/FelixCodesTech/Fully-Automatic-Rickroller" target="_blank" rel="noopener noreferrer">Get this thing on Github 😅</a></h3>
         </div>
     </div>
 </div>
